Fixed some spacing and styling for events#my_events

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,7 +60,7 @@ div.default-container {
 		padding-top: 50px;
 	}
 	@media screen and(max-width: $break-iphone6plus) {
-		padding-top: 80px;
+		padding-top: 50px;
 	}
 }
 
