--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -803,6 +803,7 @@ div#search-results-container {
 					div.event-date {
 						font-size: .80em;
 						margin-bottom: 2px;
+						color: darken($cloud, 40%);
 					}
 					div.event-attending {
 						font-size: .80em;
@@ -881,7 +882,7 @@ div#search-results-container {
 						float: none;
 						height: auto;
 						padding-bottom: 65px;
-						div.description {
+						div.event-description {
 							margin-bottom: 10px;
 						}
 						div.button-wrapper {
@@ -892,11 +893,9 @@ div#search-results-container {
 								margin: 0;
 								height: 30px;
 								&.invite {
-									border-top: 1px solid $cloud;
-									border-bottom: 1px solid $cloud;
+									margin-bottom: 5px;
 								}
 								&.edit {
-									border-bottom: 1px solid $cloud;
 								}
 							}
 						}
